Prevent inputs from jumping

--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -21,8 +21,8 @@
 
 .pairs_input_full, .pairs_input_notFull {
   display: flex;
-  padding: 0.5rem;
-  border: 1px solid rgba(209, 213, 219, 1);
+  padding: 0.5rem; /* For a better look. Padding for all inputs */
+  outline: 1px solid rgba(209, 213, 219, 1); /* Outline is used instead of border to prevent divs to jumping when input is clicked */
   border-radius: 0.375rem;
   background-color: #f9f9f9;
 }
@@ -52,16 +52,15 @@
   margin-right: 25%;
   width: 50%;
 }
-
+/* When the input is clicked */
 .pairs_input_full:focus, .pairs_input_notFull:focus {
     background-color: #ffffff;  /* Change the background color when the input is focused */
-    /* border-color: var(--custom-gray-color);          Change the border color */
-    outline: none;               /* Optional: Remove the default focus outline */
-    border: 2px solid rgb(0, 0, 0);
+    outline: 2px solid rgb(0, 0, 0); /* Make border thicker */
   }
   
   .pairs_input_full:focus:invalid, .pairs_input_notFull:focus:invalid {
     border-color: rgba(0, 0, 0, 0.899);
+    
   }
   
   @media screen and (max-width: 768px) {
